--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1146,7 +1146,7 @@
                 <a href="{{ url_for('hook_generator.hook_generator') }}"
                    class="nav-subitem {% if request.endpoint and 'hook_generator.' in request.endpoint %}active{% endif %}"
                    onclick="return BaseApp.checkGuestAccess(event, this)">
-                    <i class="ph ph-megaphone-simple"></i>
+                    <i class="ph ph-fish-simple"></i>
                     <span>Hook Generator</span>
                 </a>
                 {% endif %}
