--- a/app/templates/home/dashboard.html
+++ b/app/templates/home/dashboard.html
@@ -1515,6 +1515,7 @@ const platformFeatures = {
         { icon: 'ph-file-text', title: 'Write Description', desc: 'Engaging descriptions', url: '{{ url_for("video_description.video_description") }}' },
         { icon: 'ph-image', title: 'Design Thumbnail', desc: 'Eye-catching thumbnails', url: '{{ url_for("thumbnail.index") }}' },
         { icon: 'ph-video', title: 'Analyze Video', desc: 'Performance insights', url: '{{ url_for("analyze_video.analyze_video") }}' },
+        { icon: 'ph-magic-wand', title: 'Optimize Video', desc: 'Improve your videos', url: '{{ url_for("optimize_video.optimize_video") }}' },
         { icon: 'ph-users-three', title: 'Track Competitors', desc: 'Monitor competition', url: '{{ url_for("competitors.competitors") }}' },
         { icon: 'ph-chart-line-up', title: 'Growth Analytics', desc: 'Track your progress', url: '{{ url_for("analytics.index", platform="youtube") }}' }
     ],
