--- a/app/templates/optimize_video/index.html
+++ b/app/templates/optimize_video/index.html
@@ -41,10 +41,10 @@
                     <div id="myVideosGrid" class="videos-grid">
                         <!-- Videos will be populated here -->
                     </div>
-                    <div id="emptyVideos" class="empty-state">
+                    <div id="emptyVideos" class="empty-state" style="display: none;">
                         <i class="ph ph-video"></i>
                         <p>Connect your YouTube channel to see your videos</p>
-                        <span>Go to Account Settings to connect</span>
+                        <span>Go to Social Accounts to connect</span>
                     </div>
                 </div>
 
